# wip

./: .gitignore  CMakeLists.txt  CPP17_BEST_PRACTICES.md  DEVELOPMENT_GUIDE.md  imgui.ini
apps/application_demo/: CMakeLists.txt
apps/application_demo/src/: docking_demo.cpp  imgui_layer_demo.cpp  layer_demo.cpp  main.cpp  simple_imgui_demo.cpp
apps/desktop_app/: CMakeLists.txt  README.md
apps/desktop_app/src/: main.cpp
apps/gran_azul/: CMakeLists.txt  README.md
apps/gran_azul/src/: main.cpp
apps/gran_azul/src/project/: project_config.cpp  project_config.h  project_manager.cpp  project_manager.h
apps/gran_azul/src/report/: report_generator.cpp  report_generator.h
apps/gran_azul/src/utils/: async_process_executor.cpp  async_process_executor.h
apps/gran_azul/src/widgets/: analysis_config_widget.cpp  analysis_config_widget.h  analysis_config_widget_old.cpp  analysis_config_widget_simple.cpp  analysis_manager_widget.cpp  analysis_manager_widget.h  analysis_result.cpp  analysis_result.h  analysis_result_panel.cpp  analysis_result_panel.h  cppcheck_config_widget.cpp  cppcheck_config_widget.h  log_window_panel.cpp  log_window_panel.h  path_selector_widget.cpp  path_selector_widget.h  progress_dialog.cpp  progress_dialog.h  project_startup_modal.cpp  project_startup_modal.h  selectable_text_widget.cpp  selectable_text_widget.h
apps/playground/: CMakeLists.txt
apps/playground/src/: main.cpp  rng_demo.cpp
apps/test_gui/: CMakeLists.txt
apps/test_gui/src/: main.cpp
apps/window_demo/: CMakeLists.txt
apps/window_demo/src/: main.cpp
libs/analysis/: CMakeLists.txt
libs/analysis/include/: analysis_engine.h  analysis_tool.h  analysis_types.h  tool_config.h
libs/analysis/include/tools/: clang_tidy_tool.h  cppcheck_tool.h
libs/analysis/src/: analysis_engine.cpp  analysis_tool.cpp  analysis_types.cpp  tool_config.cpp
libs/analysis/src/tools/: clang_tidy_tool.cpp  cppcheck_tool.cpp
libs/analysis/test/: test_analysis_engine.cpp  test_analysis_tool.cpp  test_analysis_types.cpp  test_clang_tidy_tool.cpp  test_cppcheck_tool.cpp  test_tool_config.cpp
libs/cli/args/: CMakeLists.txt
libs/cli/args/include/: args.h
libs/cli/args/src/: args.cpp
libs/cli/args/test/: test_args.cpp
libs/game/dice/: CMakeLists.txt
libs/game/dice/include/: dice.h
libs/game/dice/src/: dice.cpp
libs/game/dice/test/: test_dice.cpp
libs/gui/application/: CMakeLists.txt
libs/gui/application/include/: application.h  layer.h
libs/gui/application/src/: application.cpp  layer.cpp
libs/gui/application/test/: test_application.cpp
libs/gui/widgets/: CMakeLists.txt
libs/gui/widgets/include/: panel.h  selectable_text_widget.h  widget.h  widgets.h
libs/gui/widgets/src/: panel.cpp  selectable_text_widget.cpp  widget.cpp
libs/gui/window/: CMakeLists.txt  README.md
libs/gui/window/include/: window.h
libs/gui/window/src/: window.cpp
libs/gui/window/test/: test_window.cpp  test_window_events.cpp
libs/serialization/json_serializer/: CMakeLists.txt
libs/serialization/json_serializer/include/: json_serializer.h
libs/serialization/json_serializer/src/: json_serializer.cpp
libs/serialization/json_serializer/test/: test_json_serializer.cpp
libs/serialization/serializer/: CMakeLists.txt
libs/serialization/serializer/include/: serializer.h
libs/serialization/serializer/test/: test_serializer.cpp
libs/time/: CMakeLists.txt
libs/time/timestamp/: CMakeLists.txt
libs/time/timestamp/include/: timestamp.h  timestamp_impl.h
libs/time/timestamp/src/: timestamp.cpp
libs/time/timestamp/tests/: CMakeLists.txt  test_timestamp.cpp
libs/time/utilities/: CMakeLists.txt
libs/time/utilities/include/: time_utilities.h  time_utilities_impl.h
libs/time/utilities/src/: time_utilities.cpp
libs/time/utilities/tests/: CMakeLists.txt  test_time_utilities.cpp
libs/utils/event/: CMakeLists.txt  README.md  wip_utils_event_config.cmake.in
libs/utils/event/include/: common_events.h  event.h  event_dispatcher.h
libs/utils/event/src/: event_dispatcher.cpp
libs/utils/event/test/: CMakeLists.txt  test_common_events.cpp  test_event_dispatcher.cpp  test_thread_safety.cpp
libs/utils/file/: CMakeLists.txt
libs/utils/file/include/: file.h
libs/utils/file/src/: file.cpp
libs/utils/file/test/: test_file.cpp
libs/utils/process/: CMakeLists.txt
libs/utils/process/include/: process.h
libs/utils/process/src/: process.cpp
libs/utils/process/test/: test_process.cpp
libs/utils/rng/: CMakeLists.txt
libs/utils/rng/include/: rng.h
libs/utils/rng/src/: rng.cpp
libs/utils/rng/test/: test_rng.cpp
libs/utils/string/: CMakeLists.txt
libs/utils/string/include/: wip_string.h
libs/utils/string/src/: string.cpp
libs/utils/string/test/: test_string.cpp
libs/utils/uid/: CMakeLists.txt
libs/utils/uid/include/: uid.h
libs/utils/uid/src/: uid.cpp
libs/utils/uid/test/: test_uid.cpp
